use correct fa icon and increase spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1772,7 +1772,7 @@ footer .company-mission {
 
 .header-link {
   position: absolute;
-  left: -0.5em;
+  left: -0.7em;
   opacity: 0;
 
   \-webkit-transition: opacity 0.2s ease-in-out 0.1s;
